bugfix: after changing flex to grid, not changing width on mobile anymor

--- a/src/components/molecules/ForecastCard/ForecastCard.module.scss
+++ b/src/components/molecules/ForecastCard/ForecastCard.module.scss
@@ -22,9 +22,6 @@
         &--red {
             background-color: var(--weather-red);
         }
-        @media (max-width: 768px) {
-            width: 40%;
-        }
     }
     &__text {
         font-size: 0.75rem;
